# celestial-accounts

./: .gitignore  CODE_OF_CONDUCT.MD  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
docs/: architecture.md
migrations/2026-04-05-223054-0000_create_accounts/: up.sql
migrations/2026-04-05-223054-0001_create_account_credentials/: down.sql  up.sql
migrations/2026-04-05-223054-0002_create_sessions/: down.sql  up.sql
migrations/2026-04-05-223054-0003_create_organizations/: down.sql  up.sql
migrations/2026-04-05-223054-0004_create_oauth_clients/: up.sql
migrations/2026-04-05-223054-0005_create_oauth_grants/: down.sql  up.sql
migrations/2026-04-05-223054-0006_create_audit_log/: up.sql
migrations/2026-04-05-224653-0000_use_pg_enums/: down.sql  up.sql
migrations/2026-04-05-230000-0000_seed_first_party_client/: down.sql  up.sql
src/: database.rs  extractors.rs  main.rs  state.rs  views.rs
src/auth/: mod.rs  password.rs  revocation.rs  session.rs  token.rs  totp.rs  verifier.rs
src/database/: controllers.rs  models.rs  schema.rs
src/database/controllers/: account.rs  credential.rs  refresh_token.rs  session.rs
src/database/models/: account.rs  audit_log.rs  authorization_code.rs  client.rs  consent_grant.rs  credential.rs  email.rs  invitation.rs  membership.rs  organization.rs  password_reset_token.rs  refresh_token.rs  session.rs
src/views/: auth.rs  oauth.rs
src/views/auth/: login.rs  mfa_verify.rs
