[package]
name = "celestial-accounts"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.6.0-rc.8"
axum = "0.8.8"
axum-extra = { version = "0.12", features = ["cookie"] }
base64 = "0.22"
deadpool-redis = { version = "0.23.0", features = ["serde", "uuid"] }
derive_more = { version = "2.1.1", features = ["deref", "deref_mut"] }
diesel = { version = "2.3.7", default-features = false, features = ["time", "uuid", "serde_json", "postgres_backend"] }
diesel-async = { version = "0.8.0", features = ["deadpool", "postgres"] }
futures-util = "0.3.32"
oxide-auth = "0.6.1"
oxide-auth-axum = "0.6.0"
password-hash = { version = "0.6.0", features = ["phc", "rand_core"] }
rusty_paseto = "0.7"
rustls = "0.23.37"
rustls-platform-verifier = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
subtle = "2"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.17"
tokio-postgres-rustls = "0.13.0"
totp-rs = "5"
uuid = { version = "1.23.0", features = ["v7", "serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
axum-reject-macro = "0.1.1"
rand = "0.10.0"
phc = { version = "0.6.1", features = ["rand_core"] }
